<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/dots_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextContent.TextHeading1"
            android:layout_margin="24dp"
            android:text="@string/welcome_gorgeous"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dots_indicator" />

        <EditText
            android:id="@+id/et_email_login"
            style="@style/TextContent.BodyM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_background_edit_text"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:minHeight="48dp"

            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.9" />

        <EditText
            android:id="@+id/et_password_login"
            style="@style/TextContent.BodyM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_background_edit_text"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:minHeight="48dp"

            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_login"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextContent.TextHeading5"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorPrimary"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_login" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_background_button_sign_in_up"
            android:text="@string/login"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.9" />

        <LinearLayout
            android:id="@+id/LL_text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/TextContent.BodyS"
                android:text="@string/don_t_have_an_account"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:id="@+id/tv_sign_up_now"
                style="@style/TextContent.BodyS"
                android:layout_marginStart="4dp"
                android:text="@string/sign_up_now"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/v_horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="?attr/colorAccent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LL_text_sign_up"
            app:layout_constraintWidth_default="spread"
            app:layout_constraintWidth_percent="0.9" />

        <TextView
            android:id="@+id/tv_account_sign_in"
            style="@style/TextContent.BodyS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/or_continue_with"
            android:textColor="?attr/colorAccent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_horizontal_divider" />

        <LinearLayout
            android:id="@+id/btn_loginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_background_edit_text"
            android:gravity="center_horizontal"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_sign_in">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_button_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sign_in_with_google" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>