...
    <string name="ERROR_COMPRESSING_DATA">Error compressing file</string>
    <string name="ERROR_IMAGE_EMPTY">Image cannot be empty</string>
    <string name="ERROR_TITLE_DESC_EMPTY">Title and Description cannot be empty</string>
    <string name="ERROR_TITLE_EMPTY">Title cannot be empty</string>
    <string name="ERROR_COLOR_EMPTY">Please choose one before click next</string>
    <string name="LOGOUT">Log Out</string>
    <string name="LOGOUT_CONFIRMATION_TITLE">Logout Confirmation</string>
    <string name="LOGOUT_CONFIRMATION_MESSAGE">Are you sure you want to logout?</string>
    <string name="LOGOUT_CONFIRMATION_YES">Yes</string>
    <string name="LOGOUT_CONFIRMATION_CANCEL">Cancel</string>

    <string name="makeup">MakeUp</string>
    <string name="analysis">Analysis</string>
    <string name="color">Color</string>
    <string name="compare">Compare</string>
...
