<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_menu_settings"
            app:showAsAction="collapseActionView|always"/>
    </group>
</menu>